--- a/client.html
+++ b/client.html
@@ -4,8 +4,12 @@
         <link href="client.css"     type="text/css" rel="stylesheet">
         <script src="client.js"     type="text/javascript"></script>
         <script src="serverstub.js" type="text/javascript"></script>
-
-        <script id="welcomeview"    type="text/view">
+        <title>Twidder</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div id="realwelcomeview"></div>
+        <script id="welcomeView"    type="text/view">
 
             <div id="logo">
                 <img src="wimage.png" alt="Logo and Slogan" width="340" height="400">
@@ -15,19 +19,19 @@
 
                 <div id="signIn">
 
-                    <form name="signInForm" onsubmit="validatelogin()">
+                    <form name="signInForm" onsubmit="signIn();return false;">
 
-                        <label for="signInEmail">
+                        <label for="signInEmail" style="font-size: 12px;">
             			    Email
-            			    <input type="email" name="signInEmail" required>
+            			    <input type="email" name="signInEmail" style="height:13px;"required>
                         </label>
 
-                        <label for="signInPassword">
+                        <label for="signInPassword" style="font-size: 12px;">
                             Password
-                            <input type="password" name="signInPassword" required>
+                            <input type="password" name="signInPassword" style="height:13px;"required>
                         </label>
 
-                        <input type="submit" value="Login">
+                        <input type="submit" value="SignIn">
 
                     </form>
 
@@ -35,60 +39,140 @@
 
                 <div id="signUp">
 
-                    <h2>Sign up here</h2>
+                    <h4>Sign up here</h4>
 
-                    <form name="signUpForm" onsubmit="validateregister()">
+                    <form name="signUpForm" onsubmit="signUp(); return false;">
 
-                        <label for="signUpFirstName">
+                        <label for="signUpFirstName" style="font-size: 12px;">
                             First name
-                            <input type="text" name="SignUpFirstName" required>
+                            <input type="text" name="SignUpFirstName" style="height:13px;"required>
                         </label>
 
-                        <label for="signUpLastName">
+                        <label for="signUpLastName" style="font-size: 12px;">
                             Family name
-                            <input type="text" name="SignUpFamilyName" required>
+                            <input type="text" name="SignUpFamilyName" style="height:13px;"required>
                         </label>
 
-                        <label for="signUpGender">
+                        <label for="signUpGender" style="font-size: 12px;">
                             Gender
-                            <select name="signUpGender">
+                            <select name="signUpGender"style="height:25px;">
                                 <option value="male">Male</option>
                                 <option value="female">Female</option>
                                 <option value="else">Else</option>
                             </select>
                         </label>
 
-                        <label for="signUpCity">
+                        <label for="signUpCity" style="font-size: 12px;">
                             City
-                            <input type="text" name="SignUpCity" required>
+                            <input type="text" name="SignUpCity" style="height:13px;"required>
                         </label>
 
-                        <label for="signUpCountry">
+                        <label for="signUpCountry" style="font-size: 12px;">
                             Country
-                            <input type="text" name="signUpCountry" required>
+                            <input type="text" name="signUpCountry" style="height:13px;"required>
                         </label>
 
-                        <label for="signUpEmail">
+                        <label for="signUpEmail" style="font-size: 12px;">
                         	Email
-			                <input type="email" name="signUpEmail" required>
+			                <input type="email" name="signUpEmail" style="height:13px;"required>
                         </label>
 
-                        <label for="signUpPassword">
+                        <label for="signUpPassword" style="font-size: 12px;">
                             Password
-			                <input type="password" name="signUpPassword" required>
+			                <input type="password" name="signUpPassword" style="height:13px;" required>
                         </label>
 
-                        <label for="signUpRepeatPassword">
-			                Repeat PSW
-			                <input type="password" name="signUpRepeatPassword" required>
+                        <label for="signUpRepeatPassword" style="font-size: 12px;">
+			                RepeatPwd
+			                <input type="password" name="signUpRepeatPassword" style="height:13px;"required>
                         </label>
 
-			            <input type="submit" value="SignUp">
+			            <input type="submit" value="SignUp" >
 
                     </form>
                 </div>
             </div>
         </script>
-    </head>
 
+        <script id="profileView"  type="text/view">
+            <ul id="menu">
+                <li><a href="#home" id="linkHome" onsubmit="setActiveTab('home');" class="linkActive">Home</a></li>
+                <li><a href="#browse" id="linkBrowse" onsubmit="setActiveTab('browse');">Browse</a></li>
+                <li><a href="#account" id="linkAccount" onsubmit="setActiveTab('account');>Account</a></li>
+            </ul>
+
+            <div id="tabHome" class="tabActive">
+                <h2>Your Information</h2>
+
+                <ul>
+                    <li>Email:<span id="infoEmail"></span></li>
+                    <li>First Name:<span id="infoFirstName"></span></li>
+                    <li>Last Name:<span id="infoLastName"></span></li>
+                    <li>Gender:<span id="infoGender"></span></li>
+                    <li>City:<span id="infoCity"></span></li>
+                    <li>Country:<span id="infoCountry"></span></li>
+                </ul>
+
+                <h2>Post To Wall</h2>
+                <form name="postToWall" onsubmit="postToWall();return false;">
+                    <textarea rows="6" cols="32" id="postContent" style="display:block;margin-bottom:8px;"></textarea>
+                    <input type="submit" value="Post">
+                </form>
+
+                <h2>Wall</h2>
+                <a href="#home" class="refreshWall" onclick="refreshWall();return false;">Refresh Wall</a>
+                <div id="wallPost"></div>
+            </div>
+
+            <div id="tabBrowse" class="tab">
+                <h2>Search Profile By EmailAddress</h2>
+                <form name="searchForm" onsubmit="searchProfile();return false;">
+                    <input type="text" name="profileSearch">
+                    <input type="submit" value="Search">
+                </form>
+
+                <div id="browseProfile" style="display:none;">
+                    <h2>Profile Information</h2>
+                    <ul>
+                        <li>Email:<span id="browseEmail"></span></li>
+                        <li>First Name:<span id="browseFirstName"></span></li>
+                        <li>Last Name:<span id="browseLastName"></span></li>
+                        <li>Gender:<span id="browseGender"></span></li>
+                        <li>City:<span id="browseCity"></span></li>
+                        <li>Country:<span id="browseCountry"></span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="tabAccount" class="tab">
+                <form name="changePassword" onsubmit="changePassword();return false;">
+                    <label for="oldPassword">
+                        Old Password
+                        <input type="password" name="oldPassword" required>
+                    </label>
+
+                    <label for="newPassword">
+                        New Password
+                        <input type="password" name="newPassword" required>
+                    </label>
+
+                    <label for="repeatPassword">
+                        Repeat Password
+                        <input type="password" name="repeatPassword" required>
+                    </label>
+
+                    <input type="submit" value="Change password">
+                </form>
+
+                <a href="#" id="signOut" onclick="signOut();return false;">Sign Out</a>
+            </div>
+
+        </script>
+
+    <body>
+        <div id = "errorBox"></div>
+        <div id="view"></div>
+    </body>
 </html>
+
+
